--- a/src/minnesota.csproj
+++ b/src/minnesota.csproj
@@ -14,6 +14,7 @@
     <Using Include="System.Linq" />
     <Using Include="System.Collections.Generic" />
     <Using Include="System.Threading.Tasks" />
+    <Using Include="System.Text.Json" />
     <Using Include="Azure" />
     <Using Include="Azure.Search.Documents" />
     <Using Include="Azure.Search.Documents.Indexes" />
